fixed header behind scrolling content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,11 +22,14 @@ body {
     width: 960px;
     margin: 0 auto;
     position: relative;
+    z-index: -1;
 }
+
 header {
     height: 64px;
     position: relative;
-    margin-bottom: 30px;
+    display: block;
+    top: 0;
 }
 h1 {
     background-color: #4aaaa5;
@@ -42,7 +45,6 @@ nav {
     float: right;
     position: absolute;
     right: 0;
-    clear: both;
 }
 .nav li {
     list-style: none;
@@ -60,10 +62,13 @@ a {
     color: #4aaaa5;
 }
 main {
+    position: relative;
+    margin-top: 84px;
     background-color: #fff;
     padding: 40px;
     height: auto;
     clear: both;
+    z-index: 0;
 }
 .clearfix::after {
     content: "";
@@ -80,6 +85,7 @@ h2 {
 }  
 p {
     line-height: 180%;
+    padding-bottom: 30px;
 }
 .imgBox {
     float: left;
@@ -108,6 +114,9 @@ p {
     line-height: 200%;
     margin-bottom: 20px;
 }
+.formLabel {
+    padding-bottom: 0;
+}
 .btn {
     background-color: #4aaaa5;
     font-size: 110%;
@@ -115,7 +124,7 @@ p {
     color: #fff; 
     padding: 10px 20px;
 }
-.btn:hover {
+.btn button:hover {
     background-color: #666;
 }
 
